<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_color"
    android:layout_marginHorizontal="@dimen/_20sdp">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_30sdp"
        android:textAlignment="viewEnd"
        android:textColor="@color/text_color"
        android:paddingVertical="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:maxLines="1"
        />
    <TextView
        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guide1"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_30sdp"
        android:textAlignment="viewEnd"
        android:textColor="@color/grey"
        android:paddingVertical="@dimen/_15sdp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:maxLines="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/paranthese"
        app:layout_constraintTop_toBottomOf="@id/g1"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/red"
        android:textColor="@color/background_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/clear"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/paranthese"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toEndOf="@id/clear"
        app:layout_constraintEnd_toStartOf="@id/modulus"
        app:layout_constraintTop_toBottomOf="@id/g1"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/green"
        android:textSize="@dimen/_15sdp"
        android:text="@string/paranthese"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/modulus"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toEndOf="@id/paranthese"
        app:layout_constraintEnd_toStartOf="@id/division"
        app:layout_constraintTop_toBottomOf="@id/g1"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/green"
        android:textSize="@dimen/_15sdp"
        android:text="@string/modulus"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/division"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toEndOf="@id/modulus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/g1"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/green"
        android:textSize="@dimen/_15sdp"
        android:text="@string/divide"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/seven"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/clear"
        app:layout_constraintEnd_toEndOf="@id/clear"
        app:layout_constraintTop_toBottomOf="@id/clear"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/seven"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/eight"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/paranthese"
        app:layout_constraintEnd_toEndOf="@id/paranthese"
        app:layout_constraintTop_toBottomOf="@id/paranthese"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/eight"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/nine"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/modulus"
        app:layout_constraintEnd_toEndOf="@id/modulus"
        app:layout_constraintTop_toBottomOf="@id/modulus"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/nine"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiply"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/division"
        app:layout_constraintEnd_toEndOf="@id/division"
        app:layout_constraintTop_toBottomOf="@id/division"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/green"
        android:textSize="@dimen/_15sdp"
        android:text="@string/multiply"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/four"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/seven"
        app:layout_constraintEnd_toEndOf="@id/seven"
        app:layout_constraintTop_toBottomOf="@id/seven"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/four"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/five"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/eight"
        app:layout_constraintEnd_toEndOf="@id/eight"
        app:layout_constraintTop_toBottomOf="@id/eight"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/five"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/six"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/nine"
        app:layout_constraintEnd_toEndOf="@id/nine"
        app:layout_constraintTop_toBottomOf="@id/nine"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/six"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/subtract"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/multiply"
        app:layout_constraintEnd_toEndOf="@id/multiply"
        app:layout_constraintTop_toBottomOf="@id/multiply"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/green"
        android:textSize="@dimen/_15sdp"
        android:text="@string/subtract"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/one"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/four"
        app:layout_constraintEnd_toEndOf="@id/four"
        app:layout_constraintTop_toBottomOf="@id/four"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/one"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/two"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/five"
        app:layout_constraintEnd_toEndOf="@id/five"
        app:layout_constraintTop_toBottomOf="@id/five"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/two"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/three"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/six"
        app:layout_constraintEnd_toEndOf="@id/six"
        app:layout_constraintTop_toBottomOf="@id/six"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/three"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/plus"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/subtract"
        app:layout_constraintEnd_toEndOf="@id/subtract"
        app:layout_constraintTop_toBottomOf="@id/subtract"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/green"
        android:textSize="@dimen/_15sdp"
        android:text="@string/plus"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/negative"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/one"
        app:layout_constraintEnd_toEndOf="@id/one"
        app:layout_constraintTop_toBottomOf="@id/one"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_10sdp"
        android:text="@string/negative"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/zero"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/two"
        app:layout_constraintEnd_toEndOf="@id/two"
        app:layout_constraintTop_toBottomOf="@id/two"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/zero"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dot"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/three"
        app:layout_constraintEnd_toEndOf="@id/three"
        app:layout_constraintTop_toBottomOf="@id/three"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/main_grey"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/dot"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/equal"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_55sdp"
        app:layout_constraintStart_toStartOf="@id/plus"
        app:layout_constraintEnd_toEndOf="@id/plus"
        app:layout_constraintTop_toBottomOf="@id/plus"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cornerRadius="9dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/background_color"
        android:textSize="@dimen/_15sdp"
        android:text="@string/equal"
        />
</androidx.constraintlayout.widget.ConstraintLayout>